WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
221580
Crash with remote layer tree logging
https://bugs.webkit.org/show_bug.cgi?id=221580
Summary
Crash with remote layer tree logging
Simon Fraser (smfr)
Reported
2021-02-08 15:25:29 PST
Crash with remote layer tree logging
Attachments
Patch
(1.72 KB, patch)
2021-02-08 15:26 PST
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2021-02-08 15:26:21 PST
Created
attachment 419645
[details]
Patch
EWS
Comment 2
2021-02-08 16:32:10 PST
Committed
r272559
: <
https://commits.webkit.org/r272559
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 419645
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-02-10 14:31:52 PST
<
rdar://problem/74206555
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug