Crash with remote layer tree logging https://bugs.webkit.org/show_bug.cgi?id=221580

Reviewed by Tim Horton.

Null-check animation.timingFunction when dumping remote layer tree animations.

* WebProcess/WebPage/RemoteLayerTree/PlatformCAAnimationRemote.mm:
(WebKit::operator<<):


Canonical link: https://commits.webkit.org/233831@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272559 268f45cc-cd09-0410-ab3c-d52691b4dbfc